--- a/mcarbonPortal/src/app/create-account/create-account.component.html
+++ b/mcarbonPortal/src/app/create-account/create-account.component.html
@@ -126,14 +126,20 @@
 
           <div class="col-md-5">
             <div class="row justify-content-center align-items-center">
-              <ng-container *ngIf="checkImg()"
-                ><img
-                  [src]="photoUrl"
-                  style="border-radius: 50%"
-                  alt="selected logo"
-                  height="150px"
-                  width="150px"
-              /></ng-container>
+              <ng-container *ngIf="checkImg()">
+                <div class="photo-container">
+                  <img
+                    [src]="photoUrl"
+                    style="border-radius: 50%"
+                    alt="selected logo"
+                    height="150px"
+                    width="150px"
+                  />
+                  <mat-icon class="btn-close" (click)="onPhotoDeselected()">
+                    close
+                  </mat-icon>
+                </div>
+              </ng-container>
               <ng-container *ngIf="!checkImg()"
                 ><img
                   src="../../assets/img/user_profile.png"
