--- a/mcarbonPortal/src/app/create-account/create-account.component.scss
+++ b/mcarbonPortal/src/app/create-account/create-account.component.scss
@@ -216,3 +216,19 @@ img {
 ::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle {
   background-color: #009688 !important;
 }
+
+::ng-deep .mat-form-field-infix {
+  display: flex;
+  flex-direction: row;
+}
+
+.photo-container {
+  position: relative;
+}
+.btn-close {
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  color: red;
+  cursor: pointer;
+}
