--- a/mcarbonPortal/src/app/dynamic-support/dynamic-support.component.html
+++ b/mcarbonPortal/src/app/dynamic-support/dynamic-support.component.html
@@ -11,28 +11,39 @@
           <div class="card-body">
             <mat-tab-group mat-align-tabs="center">
               <mat-tab label="SMS" *ngIf="showSMSTab">
-                <form id="form1" [formGroup]="userForm" *ngIf="userForm">
+                <form id="form1" [formGroup]="userForm1" *ngIf="userForm1">
                   <div class="">
                     <div class="row row-content">
                       <div class="col-12 offset-xl-2 col-xl-8">
-                        <label
-                          id="phone"
-                          style="
-                            text-align: center;
-                            width: 100%;
-                            color: rgba(75, 72, 72, 0.356);
-                          "
-                          for="firstName"
-                          >Enter Mobile Number to Send Link:
-                        </label>
-                        <input
-                          type="text"
-                          id="fname"
-                          name="firstname"
-                          placeholder="Mobile Number"
-                          formControlName="msisdn"
-                          [(ngModel)]="inputValue"
-                        />
+                        <mat-form-field appearance="outline">
+                          <mat-label>Enter Mobile Number</mat-label>
+                          <input
+                            matInput
+                            type="text"
+                            placeholder="Mobile Number"
+                            formControlName="msisdn"
+                            [(ngModel)]="inputValue"
+                            [matTooltip]="getErrorMessage1('msisdn')"
+                            matTooltipClass="tooltip-style"
+                          />
+                          <mat-icon matSuffix>smartphone</mat-icon>
+                          <mat-error
+                            *ngIf="
+                              userForm1.get('msisdn').invalid &&
+                              userForm1.get('msisdn').errors.required
+                            "
+                          >
+                            Mobile Number is required
+                          </mat-error>
+                          <mat-error
+                            *ngIf="
+                              userForm1.get('msisdn').invalid &&
+                              userForm1.get('msisdn').errors.pattern
+                            "
+                          >
+                            Enter valid mobile numbers
+                          </mat-error>
+                        </mat-form-field>
                       </div>
                     </div>
                     <div class="row">
@@ -46,14 +57,6 @@
                       </div>
                     </div>
                     <div class="row">
-                      <div
-                        class="col-4 offset-4 text-center"
-                        *ngIf="phoneError"
-                      >
-                        <p class="alert alert-danger">
-                          <strong>Enter valid mobile number</strong>
-                        </p>
-                      </div>
                       <div class="row" *ngIf="showDescription">
                         <div class="col-12 offset-xl-2 col-xl-8">
                           <p class="alert alert-success">
@@ -75,28 +78,39 @@
                 </form></mat-tab
               >
               <mat-tab label="Whatsapp" *ngIf="showWhatsappTab"
-                ><form id="form1" [formGroup]="userForm" *ngIf="userForm">
+                ><form id="form1" [formGroup]="userForm2" *ngIf="userForm2">
                   <div class="">
                     <div class="row row-content">
                       <div class="col-12 offset-xl-2 col-xl-8">
-                        <label
-                          id="phone"
-                          style="
-                            text-align: center;
-                            width: 100%;
-                            color: rgba(75, 72, 72, 0.356);
-                          "
-                          for="firstName"
-                          >Enter Mobile Number to Send Link:
-                        </label>
-                        <input
-                          type="text"
-                          id="fname"
-                          name="firstname"
-                          placeholder="Mobile Number"
-                          formControlName="msisdn"
-                          [(ngModel)]="inputValue"
-                        />
+                        <mat-form-field appearance="outline">
+                          <mat-label>Enter Mobile Number</mat-label>
+                          <input
+                            matInput
+                            type="text"
+                            placeholder="Mobile Number"
+                            formControlName="msisdn"
+                            [(ngModel)]="inputValue"
+                            [matTooltip]="getErrorMessage1('msisdn')"
+                            matTooltipClass="tooltip-style"
+                          />
+                          <mat-icon matSuffix>smartphone</mat-icon>
+                          <mat-error
+                            *ngIf="
+                              userForm2.get('msisdn').invalid &&
+                              userForm2.get('msisdn').errors.required
+                            "
+                          >
+                            Mobile Number is required
+                          </mat-error>
+                          <mat-error
+                            *ngIf="
+                              userForm2.get('msisdn').invalid &&
+                              userForm2.get('msisdn').errors.pattern
+                            "
+                          >
+                            Enter valid mobile numbers
+                          </mat-error>
+                        </mat-form-field>
                       </div>
                     </div>
                     <div class="row">
@@ -110,14 +124,6 @@
                       </div>
                     </div>
                     <div class="row">
-                      <div
-                        class="col-4 offset-4 text-center"
-                        *ngIf="phoneError"
-                      >
-                        <p class="alert alert-danger">
-                          <strong>Enter valid mobile number</strong>
-                        </p>
-                      </div>
                       <div class="row" *ngIf="showDescription">
                         <div class="col-12 offset-xl-2 col-xl-8">
                           <p class="alert alert-success">
@@ -139,44 +145,99 @@
                 </form>
               </mat-tab>
 
-              <mat-tab label="Call on App" *ngIf="showAppTab"
-                ><form id="form1" [formGroup]="userForm" *ngIf="userForm">
+              <mat-tab label="Call on App" *ngIf="showAppTab">
+                <form id="form1" [formGroup]="userForm3" *ngIf="userForm3">
                   <div class="row row-content">
-                    <div class="col-12 offset-xl-2 col-xl-8">
-                      <label
-                        id="phone"
-                        style="
-                          text-align: center;
-                          width: 100%;
-                          color: rgba(75, 72, 72, 0.356);
-                        "
-                        for="firstName"
-                        >Enter Mobile Number to Send Link:
-                      </label>
-                      <input
-                        type="text"
-                        id="fname"
-                        name="firstname"
-                        placeholder="Mobile Number"
-                        formControlName="msisdn"
-                        [(ngModel)]="inputValue"
-                      />
-                      <input
-                        type="text"
-                        id="fname"
-                        name="firstname"
-                        placeholder="Notification Title"
-                        formControlName="title"
-                        [(ngModel)]="titleValue"
-                      />
-                      <input
-                        type="text"
-                        id="fname"
-                        name="firstname"
-                        placeholder="Notification Body"
-                        formControlName="body"
-                        [(ngModel)]="bodyValue"
-                      />
+                    <div class="fields col-12 offset-xl-2 col-xl-8">
+                      <mat-form-field appearance="outline">
+                        <mat-label>Enter Mobile Number</mat-label>
+                        <input
+                          matInput
+                          type="text"
+                          placeholder="Mobile Number"
+                          formControlName="msisdn"
+                          [(ngModel)]="inputValue"
+                          [matTooltip]="getErrorMessage3('msisdn')"
+                          matTooltipClass="tooltip-style"
+                        />
+                        <mat-icon matSuffix>smartphone</mat-icon>
+                        <mat-error
+                          *ngIf="
+                            userForm3.get('msisdn').invalid &&
+                            userForm3.get('msisdn').errors.required
+                          "
+                        >
+                          Mobile Number is required
+                        </mat-error>
+                        <mat-error
+                          *ngIf="
+                            userForm3.get('msisdn').invalid &&
+                            userForm3.get('msisdn').errors.pattern
+                          "
+                        >
+                          Enter valid mobile numbers
+                        </mat-error>
+                      </mat-form-field>
+                      <mat-form-field appearance="outline">
+                        <mat-label>Enter Notification Title</mat-label>
+                        <input
+                          matInput
+                          type="text"
+                          placeholder="Notification Title"
+                          formControlName="title"
+                          [(ngModel)]="titleValue"
+                          [matTooltip]="getErrorMessage3('title')"
+                          matTooltipClass="tooltip-style"
+                        />
+                        <mat-icon matSuffix>title</mat-icon>
+                        <mat-error
+                          *ngIf="
+                            userForm3.get('title').invalid &&
+                            userForm3.get('title').errors.required
+                          "
+                        >
+                          Title is required
+                        </mat-error>
+                        <mat-error
+                          *ngIf="
+                            userForm3.get('title').invalid &&
+                            (userForm3.get('title').errors.minlength ||
+                              userForm3.get('title').errors.maxlength)
+                          "
+                        >
+                          Title should contain 4-16 characters only
+                        </mat-error>
+                      </mat-form-field>
+                      <mat-form-field appearance="outline">
+                        <mat-label>Enter Notification Body</mat-label>
+                        <input
+                          matInput
+                          type="text"
+                          placeholder="Notification Body"
+                          formControlName="body"
+                          [(ngModel)]="bodyValue"
+                          [matTooltip]="getErrorMessage3('body')"
+                          matTooltipClass="tooltip-style"
+                        />
+                        <mat-icon matSuffix>subtitles</mat-icon>
+                        <mat-error
+                          *ngIf="
+                            userForm3.get('body').invalid &&
+                            userForm3.get('body').errors.required
+                          "
+                        >
+                          Body is required
+                        </mat-error>
+                        <mat-error
+                          *ngIf="
+                            userForm3.get('body').invalid &&
+                            (userForm3.get('body').errors.minlength ||
+                              userForm3.get('body').errors.maxlength)
+                          "
+                        >
+                          Body should contain 6-30 characters only
+                        </mat-error>
+                      </mat-form-field>
                     </div>
                   </div>
                   <div class="row">
@@ -190,11 +251,6 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-4 offset-4 text-center" *ngIf="phoneError">
-                      <p class="alert alert-danger">
-                        <strong>Enter valid mobile number</strong>
-                      </p>
-                    </div>
                     <div class="row" *ngIf="showDescription">
                       <div class="col-12">
                         <p class="alert alert-success">
@@ -212,8 +268,8 @@
                       </div>
                     </div>
                   </div>
-                </form></mat-tab
-              >
+                </form>
+              </mat-tab>
             </mat-tab-group>
           </div>
         </div>
